# prikoli

./: README.md
lab1/: file1.txt  file2.txt  lab1.docx  sort.c
laba2proga/: prikoluha
laba2proga/output/: saod.py
laba2proga/output/laba2spiski.dSYM/Contents/: Info.plist
laba2proga/output/laba2spiski.dSYM/Contents/Resources/Relocations/x86_64/: laba2spiski.yml
laba2proga/output/mem.dSYM/Contents/Resources/Relocations/x86_64/: mem.yml
laba2proga/output/stud_sort.dSYM/Contents/: Info.plist
laba2proga/output/stud_sort.dSYM/Contents/Resources/Relocations/x86_64/: stud_sort.yml
laba4proga/: output.txt  prikoli.txt  proga.c  progalofls
laba4proga/output/: proga
laba4proga/output/proga.dSYM/Contents/Resources/DWARF/: proga
laba4proga/output/proga.dSYM/Contents/Resources/Relocations/x86_64/: proga.yml
laba5/: laba5.c  laba55.c  poisk  zapis
laba6proga/: CMakeLists.txt  main.c  program_static  students.h  students_io.c  students_search.c
laba7777/: main  main.c  plot.py  results.csv
laba7777/output/: main
laba7777/output/main.dSYM/Contents/Resources/DWARF/: main
laba_prog3/3labayou/-/: лаба 1  лаба 2
laba_prog3/3labayou/lab_git/: sort.c
laba_prog3/3labayou/lab_git/cdcdcd/: sort.c
labalabaprogaproga/: a.out  laba2spiski.c  run_sort.sh  stud_sort.c
labalabaprogaproga/output/: laba2spiski  mem  stud_sort
labalabaprogaproga/output/laba2spiski.dSYM/Contents/Resources/DWARF/: laba2spiski
labalabaprogaproga/output/mem.dSYM/Contents/Resources/DWARF/: mem
labalabaprogaproga/output/stud_sort.dSYM/Contents/Resources/DWARF/: stud_sort
(+1 files in other folders)
